Shenandoah: accept NULL fwdptr to cooperate with JVMTI and JFR

XMLWordPrintable

    • gc
    • b13
    • Verified

        $ make images run-test TEST=vmTestbase_nsk_jvmti TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC"

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/home/shade/trunks/jdk-jdk/src/hotspot/share/gc/shenandoah/shenandoahNMethod.cpp:197), pid=17469, tid=17571
        # Error: Shenandoah assert_correct failed; Forwardee must point to a heap address

        Referenced from:
          interior location: 0x00007fc9b07f868d
          outside of Java heap
          0x00007fc9b07f868d is at entry_point+77 in (nmethod*)0x00007fc9b07f8490

        Object:
          0x000000070ed08c78 - klass 0x000000080036f2e8 java.util.ImmutableCollections$SetN
                allocated after mark start
                marked
            not in collection set
          mark: marked(0x0000000000000003)
          region: | 0|R |BTE 70ed00000, 70ee00000, 70ee00000|TAMS 70ed00000|U 1024K|T 1024K|G 0B|S 0B|L 0B|CP 0|SN 1, 1, 0, 0

        Forwardee:
          0x0000000000000000 - safe print, no details

        Failing tests:
         vmTestbase/nsk/jvmti/IterateOverReachableObjects/iterreachobj001/TestDescription.java
         vmTestbase/nsk/jvmti/IterateOverReachableObjects/iterreachobj002/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/capability/CM02/cm02t001/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP01/ap01t001/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP03/ap03t001/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP04/ap04t001/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP04/ap04t002/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP04/ap04t003/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP05/ap05t001/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP05/ap05t002/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP07/ap07t001/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP07/ap07t002/TestDescription.java
         vmTestbase/nsk/jvmti/scenarios/allocation/AP09/ap09t001/TestDescription.java
         vmTestbase/nsk/jvmti/unit/FollowReferences/followref002/TestDescription.java
         vmTestbase/nsk/jvmti/unit/FollowReferences/followref003/TestDescription.java
         vmTestbase/nsk/jvmti/unit/FollowReferences/followref004/TestDescription.java
         vmTestbase/nsk/jvmti/unit/FollowReferences/followref006/TestDescription.java
         vmTestbase/nsk/jvmti/unit/heap/HeapWalkTests/TestDescription.java
         vmTestbase/nsk/jvmti/unit/heapref/TestDescription.java
         vmTestbase/nsk/jvmti/unit/refignore/TestDescription.java

              Assignee:
              Zhengyu Gu
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: