8237632: Shenandoah: accept NULL fwdptr to cooperate with JVMTI and JFR

Reviewed-by: shade, rkennke